--- a/app/system/index.html
+++ b/app/system/index.html
@@ -125,7 +125,14 @@
     <section class="section fade-up">
       <h2>研究背景</h2>
       <p>
-        このプロジェクトは、<br>
+        このプロジェクトは、近年、飲食店や商業施設などで混雑が問題となっており、利用者は待ち時間を事前に把握できず、不便を感じることが多くあります。一方、管理者も混雑の予測が難しく、適切な人員配置や入店制御が困難です。
+
+従来の混雑管理では、カメラやセンサーを用いた手法が多く検討されていますが、これらはコストやプライバシー面で課題があります。また、QRコードを使った既存のシステムは、出席確認や認証など限定的な用途にとどまっていました。
+
+本研究では、入退店時のQRコード読み取りによって混雑状況を記録・可視化するシステムを提案します。
+利用者は自分の待ち時間や混雑度をリアルタイムで確認でき、安心して利用できます。
+管理者は混雑の推移や平均滞在時間を把握し、データに基づいた運営が可能となります。
+このシステムは、低コスト・プライバシー配慮・高精度を両立した、利用者・管理者双方に役立つ混雑可視化の仕組みです。<br>
       </p>
     </section>
 
