--- a/app/system/index.html
+++ b/app/system/index.html
@@ -116,8 +116,8 @@
 
     <section class="section fade-up">
       <h2>このプロジェクトについて</h2>
-      <p>QRコードを使ってお客様の入退店を記録し、店舗の混雑状況やテーブル利用状況、外の待ち状況などをリアルタイムで可視化するシステムです。<br>
-      お客様は入店と退店のそれぞれ際に各テーブルにあるQRコードを読み込んでもらいます。この情報は現在の混雑度や混雑時間の把握に利用されます<br>
+      <p>QRコードを使ってお客様の入退店を記録し、店舗の混雑状況やテーブル利用状況、外の待ち状況などをリアルタイムで可視化するシステムです。
+      お客様は入店と退店のそれぞれ際に各テーブルにあるQRコードを読み込んでもらいます。この情報は現在の混雑度や混雑時間の把握に利用されます
       この方法によってお客様は実際に店に向かわなくても混雑度を知ることができ、行動の最適化を図ることができるようになります。</p>
     </section>
 
@@ -127,12 +127,12 @@
       <p>
         このプロジェクトは、近年、飲食店や商業施設などで混雑が問題となっており、利用者は待ち時間を事前に把握できず、不便を感じることが多くあります。一方、管理者も混雑の予測が難しく、適切な人員配置や入店制御が困難です。
 
-従来の混雑管理では、カメラやセンサーを用いた手法が多く検討されていますが、これらはコストやプライバシー面で課題があります。また、QRコードを使った既存のシステムは、出席確認や認証など限定的な用途にとどまっていました。
+　　　　 従来の混雑管理では、カメラやセンサーを用いた手法が多く検討されていますが、これらはコストやプライバシー面で課題があります。また、QRコードを使った既存のシステムは、出席確認や認証など限定的な用途にとどまっていました。
 
-本研究では、入退店時のQRコード読み取りによって混雑状況を記録・可視化するシステムを提案します。
-利用者は自分の待ち時間や混雑度をリアルタイムで確認でき、安心して利用できます。
-管理者は混雑の推移や平均滞在時間を把握し、データに基づいた運営が可能となります。
-このシステムは、低コスト・プライバシー配慮・高精度を両立した、利用者・管理者双方に役立つ混雑可視化の仕組みです。<br>
+　　　　 本研究では、入退店時のQRコード読み取りによって混雑状況を記録・可視化するシステムを提案します。
+　　　　 利用者は自分の待ち時間や混雑度をリアルタイムで確認でき、安心して利用できます。
+　　　　 管理者は混雑の推移や平均滞在時間を把握し、データに基づいた運営が可能となります。
+　　　　 このシステムは、低コスト・プライバシー配慮・高精度を両立した、利用者・管理者双方に役立つ混雑可視化の仕組みです。
       </p>
     </section>
 
