--- a/app/system/index.html
+++ b/app/system/index.html
@@ -137,38 +137,20 @@
     <section class="section fade-up">
       <h2>特徴</h2>
       <p>
-         利用者向け機能
+         利用者向け機能<br>
 
 　　　　・QRコードを使った入退店記録<br>
-　　　　スマートフォンでQRコードを読み取るだけで入店・退店が記録される。<br>
-
 　　　　・リアルタイム混雑状況の確認<br>
-  　　　店内の現在の混雑度や待ち時間をWebページ上で即時に確認可能。<br>
-
-✅ 待機状況の可視化
-自分の前にいる人数や予想待ち時間を「wait.html」で確認。
-
-✅ 順番が来たらメール通知（EmailJSによる通知）
-待ち順が近づいたら自動または手動でメール通知を受け取れる。
-
-🧑‍🏫 管理者向け機能
-
-✅ リアルタイム混雑ダッシュボード（dashboard.html）
-今日の入店推移をリアルタイム折れ線グラフで表示。
-
-✅ ヒストグラム分析ページ（histogram.html）
-日・週・月単位での入店傾向をグラフ化。CSV出力も可能。
-
-✅ テーブル管理ページ（table_management.html）
-各テーブルの利用状況（空席・使用中・滞在時間）を一覧表示。履歴も確認可能。
-
-✅ 統計グラフ・サマリー表示
-・全体使用率の円グラフ
-・テーブル別使用回数・平均滞在時間の棒グラフ
-・使用履歴のCSVダウンロード
-
-✅ QRコード自動生成機能（generate.html）
-テーブル番号別の入店・退店用QRコードを生成・印刷可能。
+　　　　・待機状況の可視化<br>
+　　　　・順番が来たらメール通知（EmailJSによる通知）<br>
+        　<br>
+　　　　 管理者向け機能<br>
+　　　　・リアルタイム混雑ダッシュボード（dashboard.html）<br>
+　　　　・ヒストグラム分析ページ（histogram.html）<br>
+　　　　・テーブル管理ページ（table.html）<br>
+　　　　・履歴のCSVダウンロード<br>
+　　　　・順番待ち管理(admin.html)<br>
+　　　　・QRコード自動生成機能（generate.html）<br>
       </p>
     </section>
 
