--- a/app/system/index.html
+++ b/app/system/index.html
@@ -125,34 +125,26 @@
     <section class="section fade-up">
       <h2>研究背景</h2>
       <p>
-        このプロジェクトは、近年、飲食店や商業施設などで混雑が問題となっており、利用者は待ち時間を事前に把握できず、不便を感じることが多くあります。一方、管理者も混雑の予測が難しく、適切な人員配置や入店制御が困難です。
-　　　　 従来の混雑管理では、カメラやセンサーを用いた手法が多く検討されていますが、これらはコストやプライバシー面で課題があります。また、QRコードを使った既存のシステムは、出席確認や認証など限定的な用途にとどまっていました。
-　　　　 本研究では、入退店時のQRコード読み取りによって混雑状況を記録・可視化するシステムを提案します。
-　　　　 利用者は自分の待ち時間や混雑度をリアルタイムで確認でき、安心して利用できます。
-　　　　 管理者は混雑の推移や平均滞在時間を把握し、データに基づいた運営が可能となります。
-　　　　 このシステムは、低コスト・プライバシー配慮・高精度を両立した、利用者・管理者双方に役立つ混雑可視化の仕組みです。
+        このプロジェクトは、近年、飲食店や商業施設などで混雑が問題となっており、利用者は待ち時間を事前に把握できず、不便を感じることが多くあります。一方、管理者も混雑の予測が難しく、適切な人員配置や入店制御が困難です。従来の混雑管理では、カメラやセンサーを用いた手法が多く検討されていますが、これらはコストやプライバシー面で課題があります。また、QRコードを使った既存のシステムは、出席確認や認証など限定的な用途にとどまっていました。
+本研究では、入退店時のQRコード読み取りによって混雑状況を記録・可視化するシステムを提案します。
+利用者は自分の待ち時間や混雑度をリアルタイムで確認でき、安心して利用できます。
+管理者は混雑の推移や平均滞在時間を把握し、データに基づいた運営が可能となります。
+このシステムは、低コスト・プライバシー配慮・高精度を両立した、利用者・管理者双方に役立つ混雑可視化の仕組みです。
       </p>
     </section>
 
-    <section class="section fade-up">
-      <h2>特徴</h2>
-      <p>
-         利用者向け機能<br>
-
-　　　　・QRコードを使った入退店記録<br>
-　　　　・リアルタイム混雑状況の確認<br>
-　　　　・待機状況の可視化<br>
-　　　　・順番が来たらメール通知（EmailJSによる通知）<br>
-        　<br>
-　　　　 管理者向け機能<br>
-　　　　・リアルタイム混雑ダッシュボード（dashboard.html）<br>
-　　　　・ヒストグラム分析ページ（histogram.html）<br>
-　　　　・テーブル管理ページ（table.html）<br>
-　　　　・履歴のCSVダウンロード<br>
-　　　　・順番待ち管理(admin.html)<br>
-　　　　・QRコード自動生成機能（generate.html）<br>
-      </p>
-    </section>
+<section id="features" class="p-6 bg-gray-50 rounded-xl shadow-md mt-8">
+  <h2 class="text-2xl font-bold mb-4">システムの特徴</h2>
+  <ul class="list-disc list-inside space-y-2 text-gray-700">
+    <li><strong>QRコードによる入退店記録</strong>：利用者はQRコードを読み取るだけで入退店が記録され、データが自動的に反映されます。</li>
+    <li><strong>リアルタイム混雑表示</strong>：店内の混雑状況や待ち時間をリアルタイムで確認可能です。</li>
+    <li><strong>待機状況の可視化と通知</strong>：自分の順番・待ち時間を確認でき、順番が来るとメールで通知されます。</li>
+    <li><strong>管理者ダッシュボード</strong>：現在の入店者数や推移をリアルタイムで把握できる折れ線グラフを搭載しています。</li>
+    <li><strong>混雑傾向の分析</strong>：日・週・月単位の入店傾向をヒストグラムで可視化し、CSVとして出力可能です。</li>
+    <li><strong>テーブル別利用状況の管理</strong>：各テーブルの利用状況・滞在時間・履歴を確認し、使用率や平均滞在時間をグラフ化します。</li>
+    <li><strong>QRコード生成機能</strong>：管理者がテーブルごとに入店・退店用のQRコードを生成・印刷できます。</li>
+  </ul>
+</section>
 
     <section class="section fade-up">
       <h2>技術スタック</h2>
