--- a/app/system/index.html
+++ b/app/system/index.html
@@ -133,7 +133,7 @@
       </p>
     </section>
 
-<section id="features" class="p-6 bg-gray-50 rounded-xl shadow-md mt-8">
+<section id="features" class="section fade-up">
   <h2 class="text-2xl font-bold mb-4">システムの特徴</h2>
   <ul class="list-disc list-inside space-y-2 text-gray-700">
     <li><strong>QRコードによる入退店記録</strong>：利用者はQRコードを読み取るだけで入退店が記録され、データが自動的に反映されます。</li>
@@ -143,6 +143,29 @@
     <li><strong>混雑傾向の分析</strong>：日・週・月単位の入店傾向をヒストグラムで可視化し、CSVとして出力可能です。</li>
     <li><strong>テーブル別利用状況の管理</strong>：各テーブルの利用状況・滞在時間・履歴を確認し、使用率や平均滞在時間をグラフ化します。</li>
     <li><strong>QRコード生成機能</strong>：管理者がテーブルごとに入店・退店用のQRコードを生成・印刷できます。</li>
+  </ul>
+</section>
+
+    <section id="purpose" class="section fade-up">
+  <h2 class="text-2xl font-bold mb-4">開発目的</h2>
+  <p class="mb-3">
+    本システムの目的は、QRコードを活用して中小規模の施設でも導入しやすい、低コストでプライバシーに配慮した混雑可視化の仕組みを提供することです。
+  </p>
+  <p class="mb-3">
+    カメラやセンサーを使わず、利用者が入退店時にQRコードを読み取るだけで混雑状況を自動記録・可視化できます。これにより、利用者は待ち時間を事前に把握でき、管理者は混雑状況をデータとして分析・運営に活用できます。
+  </p>
+  <p>
+    本研究は、現実的な運用可能性を重視し、誰もが手軽に使える混雑管理の新しいアプローチを提示します。
+  </p>
+</section>
+
+<section id="future" class="section fade-up">
+  <h2 class="text-2xl font-bold mb-4">今後の展望</h2>
+  <ul class="list-disc list-inside space-y-2 text-gray-700">
+    <li><strong>利用者体験の向上：</strong> 入退店忘れ防止通知や、曜日・時間帯別のデータを活用した高精度な待ち時間予測を導入予定。</li>
+    <li><strong>管理者支援機能の拡張：</strong> 混雑ピークの予測や、自動入店通知機能を追加し、運営効率をさらに向上。</li>
+    <li><strong>技術的発展：</strong> AIカメラ・赤外線センサーとの連携による自動化や、Webプッシュ通知・LINE APIなどの多様な通知手段に対応。</li>
+    <li><strong>社会的意義：</strong> 高コスト・プライバシー問題を抱える従来手法に代わる、低コストで実用的な混雑管理ソリューションとしての価値。</li>
   </ul>
 </section>
 
