--- a/app/system/index.html
+++ b/app/system/index.html
@@ -107,6 +107,7 @@
   </header>
 
   <div class="container">
+   <h2>店内の混雑状況をリアルタイムで見える化を目指す</h2>
     <section class="section">
       <img src="picture.png" alt="タイトル" class="fade-up" />
       <div class="button-wrapper fade-up">
