--- a/app/system/index.html
+++ b/app/system/index.html
@@ -107,9 +107,8 @@
   </header>
 
   <div class="container">
-   <h2>店内の混雑状況をリアルタイムで見える化を目指す</h2>
+   <h2　class="fade-in>店内の混雑状況をリアルタイムで見える化を目指す</h2>
     <section class="section">
-      <img src="picture.png" alt="タイトル" class="fade-up" />
       <div class="button-wrapper fade-up">
         <a href="dashboard.html" class="btn-start">▶ 使ってみる</a>
       </div>
