--- a/app/system/index.html
+++ b/app/system/index.html
@@ -107,7 +107,9 @@
   </header>
 
   <div class="container">
-   <h1　class="fade-in>店内の混雑状況をリアルタイムで見える化を目指す</h1>
+        <section class="section fade-up">
+      <h2>店内の混雑状況をリアルタイムで見える化を目指す</h2>
+            </section>
     <section class="section">
       <div class="button-wrapper fade-up">
         <a href="dashboard.html" class="btn-start">▶ 使ってみる</a>
