--- a/app/system/index.html
+++ b/app/system/index.html
@@ -112,6 +112,7 @@
             </section>
     <section class="section">
       <div class="button-wrapper fade-up">
+          <img id="picture" src="picture.png" alt="ロゴ">
         <a href="dashboard.html" class="btn-start">▶ 使ってみる</a>
       </div>
     </section>
