--- a/app/system/index.html
+++ b/app/system/index.html
@@ -97,6 +97,13 @@
     footer a:hover {
       text-decoration: underline;
     }
+
+    .map-iframe {
+      border: 2px solid #444;
+      border-radius: 8px;
+      width: 850px;
+      height: 650px;
+    }
   </style>
 </head>
 
