--- a/app/system/index.html
+++ b/app/system/index.html
@@ -119,7 +119,8 @@
             </section>
     <section class="section">
       <div class="button-wrapper fade-up">
-      <iframe src="picture.html" class="map-iframe"></iframe>
+      <iframe src="picture.png" class="map-iframe"></iframe>
+        <br>
         <a href="dashboard.html" class="btn-start">▶ 使ってみる</a>
       </div>
     </section>
