--- a/app/system/index.html
+++ b/app/system/index.html
@@ -98,11 +98,10 @@
       text-decoration: underline;
     }
 
-    .map-iframe {
-      border: 2px solid #444;
-      border-radius: 8px;
-      width: 850px;
-      height: 650px;
+    #logo {
+      width: 180px;
+      margin-bottom: 20px;
+      animation: fade-slide 1.2s ease-in-out;
     }
   </style>
 </head>
@@ -119,7 +118,7 @@
             </section>
     <section class="section">
       <div class="button-wrapper fade-up">
-      <iframe src="picture.png" class="map-iframe"></iframe>
+      <img id="logo" src="picture.png" alt="ロゴ">
         <br>
         <a href="dashboard.html" class="btn-start">▶ 使ってみる</a>
       </div>
