--- a/app/system/dashboard.html
+++ b/app/system/dashboard.html
@@ -64,12 +64,14 @@
       font-weight:600;
       font-size:14px;
     }
-    iframe {
-      width:100%;
-      height:550px;
-      border:none;
-      border-radius:16px;
-    }
+      .map-iframe {
+        width: 90%;
+        height: auto;
+      }
+      .qr-iframe {
+        width: 80%;
+        height: auto;
+      }
 
     header {
       background-color: #2c3e50;
