--- a/app/customer/display.html
+++ b/app/customer/display.html
@@ -124,7 +124,7 @@
           }
         });
       }
-      if (data.status === "waiting" && !displayed) {
+      if (data.status === "scanned" && !displayed) {
   displayed = true;
 
   statusEl.style.display = "none";
